[workspace]
members = [
  "crates/mosaic-opendal-fuse",
  "crates/mosaic-torrent-controller",
  "crates/mosaic-torrent-types",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = [
  "Eloy Lopez <eloy@eiger.co>",
  "Jonathan Andersson <jonathan@equilibrium.co",
  "Jos Dehaes <jos@eiger.co>",
]
description = "Mosaic Torrent Orchestration"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alpenlabs/mosaic-torrent"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "bitcoin"]


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[workspace.dependencies]
tracing = "0.1"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
