[package]
name = "mosaic-opendal-fuse"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A FUSE filesystem for OpenDAL"
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
fuse3 = "0.8.1"
fuse3_opendal = "0.0.19"
libc = "0.2.178"
opendal = { version = "0.54.1", features = ["services-s3"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }

[dev-dependencies]

[lints]
workspace = true
