[package]
name = "mosaic-torrent-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A torrent controller for Mosaic"
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
mosaic-torrent-types = { path = "../mosaic-torrent-types" }
transmission-client = { git = "https://github.com/joske/transmission-client.git", branch = "master" }
url = "2.5"

[dev-dependencies]
libc = "0.2"
tempfile = "3.23"
tokio = { version = "1.39", features = ["full"] }
