[package]
name = "mosaic-torrent-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A torrent controller for Mosaic"
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
log = "0.4"
mosaic-torrent-types = { path = "../mosaic-torrent-types" }
transmission-client = { git = "https://github.com/joske/transmission-client.git", branch = "master" }
url = "2.5"

[dev-dependencies]
async-trait = "0.1"
libc = "0.2"
mockall = "0.14"
tempfile = "3.23"
tokio = { version = "1.48", features = ["full"] }
env_logger = "0.11"
