[package]
name = "mosaic-torrent-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Types for Mosaic Torrent"
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
lava_torrent = "0.11.1"
thiserror = "2.0"

[dev-dependencies]
